최종프로젝트

--- a/project/test.ipynb
+++ b/project/test.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0ada037c",
    "metadata": {},
    "outputs": [
@@ -30,12 +30,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "문장 입력: 눈물\n",
-      "https://jjalbang.today/files/jjalbox/2017/12/20171209_5a2ad145ebf54.gif\n",
-      "\n",
-      "https://jjalbang.today/files/jjalbox/2016/08/20160818_57b542341b63f.jpg\n",
-      "\n",
-      "https://jjalbang.today/files/jjalbox/2016/08/20160818_57b5426a26694.gif\n",
+      "문장 입력: 슬픈 개구리\n",
+      "https://jjalbang.today/view/%EA%B6%8C%EC%B4%9D/3582\n",
       "\n"
      ]
     }
@@ -56,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc82392c",
+   "id": "30f0c188",
    "metadata": {},
    "outputs": [],
    "source": []
